syntax = "proto3";

package sbai_swarm_discovery_protos;

import "sbai_cortex_protos/cortex_state_update.proto";
import "sbai_geometry_protos/pose_stamped.proto";
import "sbai_geographic_protos/geo_point.proto";

message DiscoveryHeartbeat {
    sbai_cortex_protos.CortexState state = 1;
    string robot_id = 2;
    string ip_address = 3;
    sbai_geometry_protos.PoseStamped pose = 4;
    sbai_geographic_protos.GeoPoint gps_coordinate = 5;
}
